refactor(auth): refactor auth user code
